--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
+    "@dimforge/rapier3d-compat": "^0.19.3",
     "@types/three": "^0.180.0",
     "gsap": "^3.14.2",
     "lil-gui": "^0.20.0",
